# movies-django-alpine-htmx-project

app/: pyproject.toml
app/drf_project/: settings.py
app/movies/migrations/: 0001_initial.py
