[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Anne Bequet <a.bequet@live.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.7"
djangorestframework = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
